k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 3050
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-api
                port:
                  number: 3051
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  number: 3052
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-api
                port:
                  number: 3054
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
